add title for skills list in Project component add in locale files

--- a/frontend/portfolio-react-app/src/locales/en/translation.json
+++ b/frontend/portfolio-react-app/src/locales/en/translation.json
@@ -23,5 +23,6 @@
   "icon": "icon",
   "link_to": "Link to",
   "thumbnail": "thumbnail",
-  "resume": "Resume"
+  "resume": "Resume",
+  "skills": "Skills"
 }
