update project filters : filters is now a manytomanyfield

--- a/frontend/portfolio-react-app/src/locales/fr/translation.json
+++ b/frontend/portfolio-react-app/src/locales/fr/translation.json
@@ -13,7 +13,7 @@
   "contact_button_value": "Envoyer",
   "contact_error_message": "Le message n'a pas pu être envoyé.",
   "projects_title": "Projets",
-  "project_filter_all": "Tout",
+  "project_filter_all": "Tous",
   "footer_infos": "Tous droits réservés",
   "home": "Accueil",
   "about": "À propos",
